--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint": "echo \"No linting configured\""
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-react": "^7.24.7",
     "@electron-forge/cli": "^7.4.0",
     "@electron-forge/maker-deb": "^7.4.0",
     "@electron-forge/maker-rpm": "^7.4.0",
@@ -22,6 +24,7 @@
     "@electron-forge/plugin-webpack": "^7.4.0",
     "@electron/fuses": "^1.8.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "babel-loader": "^9.1.3",
     "css-loader": "^6.0.0",
     "electron": "31.3.1",
     "node-loader": "^2.0.0",
