--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@electron-forge/plugin-webpack": "^7.4.0",
     "@electron/fuses": "^1.8.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.0.0",
     "electron": "31.3.1",
     "node-loader": "^2.0.0",
-    "style-loader": "^3.0.0"
+    "postcss": "^8.4.41",
+    "style-loader": "^3.0.0",
+    "tailwindcss": "^3.4.9"
   },
   "keywords": [],
   "author": {
