--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "electron": "31.3.1",
     "node-loader": "^2.0.0",
     "postcss": "^8.4.41",
+    "postcss-loader": "^8.1.1",
     "style-loader": "^3.0.0",
     "tailwindcss": "^3.4.9"
   },
